--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="block">
 	<p class="blockName">This Site</p>
-	<p> This is was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.</p>
+	<p> This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.</p>
 	</div>
 	<div class="block">
 	<p class="blockName">Me</p>
