Updated things I've done
I did a new thing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div class="block">
-		<a class="blockName" target="_blank" href="https://anegasakii.github.io/Notion-Tables/">Notion Tables</a>
+		<a class="blockName" href="https://anegasakii.github.io/Notion-Tables/">Notion Tables</a>
 		<p>Sep 2020 [HTML, CSS, JS]<br>
 		Notion, a note taking app, is very good at making complex databases that you can filter and sort through.<br>
 		But I also like using simple tables in my notes, so I built a tool to automatically make compatible, paste-able math equation code that'll make simple tables.</p>
@@ -26,6 +26,11 @@
 		<a class="blockName" href="https://github.com/Anegasakii" target="_blank">GitHub</a>
 		<p>Sep 2020<br>
 		I'm not really sure what to do or what's worth putting on the Internet,<br>but I do have an account on this thing since I don't know a lot about hosting websites. You're even on one of the things I made with it!</p>
+	</div>
+	<div class="block">
+		<a class="blockName" href="https://anegasakii.github.io/AP-Bio-Flashcards/">AP Bio Flashcards</a>
+		<p>Sep 2020<br>
+		Had to make flashcards for an assignment but didn't feel like making actual phsyical cards,<br>so I had some fun with it</p>
 	</div>
 </body>
 <script src="code.js"></script>
