--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<title>Anegasaki - About</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8" />
 	<div class="nav">
