added new thing I did
made an effective raw calculator, now has a link in here

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		A lot of random toys to teach myself how to JS.</p>
 	</div>
 	<div class="block">
-		<a class="blockName" href="https://github.com/Anegasakii" target="_blank">GitHub</a>
+		<a class="blockName" href="https://github.com/Anegasakii">GitHub</a>
 		<p>Sep 2020<br>
 		I'm not really sure what to do or what's worth putting on the Internet,<br>but I do have an account on this thing since I don't know a lot about hosting websites. You're even on one of the things I made with it!</p>
 	</div>
@@ -32,6 +32,11 @@
 		<a class="blockName" href="https://anegasakii.github.io/AP-Bio-Flashcards/">AP Bio Flashcards</a>
 		<p>Sep 2020<br>
 		Had to make flashcards for an assignment but didn't feel like making actual phsyical cards,<br>so I had some fun with it</p>
+	</div>
+	<div class="block">
+		<a class="blockName" href="https://anegasakii.github.io/Effective-Raw/">Effective Raw Calculator</a>
+		<p>Oct 2020<br>
+		Felt like finishing something within the month and am too lazy to go to a calculator and put in numbers myself</p>
 	</div>
 </body>
 <script src="code.js"></script>
