page for animations
idk I like drawing stuff too, I thought I'd put it on "my site"
also learned how to do navigation stuff
wee spaghetti styling

--- a/about.html
+++ b/about.html
@@ -5,16 +5,18 @@
 	<title>Anegasaki - About</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8" />
-	<div class="nav">
-		<a class="navLink" href="index.html">Stuff</a>
-		<a class="navLink" href="about.html">About</a>
-	</div>
 </head>
 
 <body>
+	<div class="nav">
+		<a class="navLink" href="index.html">Stuff</a>
+		<a class="navLink" href="about.html">About</a>
+		<a class="navLink" href="anim.html">Animations</a>
+	</div>
+	
 	<div class="block">
 	<p class="blockName">This Site</p>
-	<p> This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.</p>
+	<p>This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.</p>
 	</div>
 	<div class="block">
 	<p class="blockName">Me</p>
