--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 	<title>Anegasaki</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8" />
-	<div class="nav">
-		<a class="navLink" href="index.html">Stuff</a>
-		<a class="navLink" href="about.html">About</a>
-	</div>
 </head>
 
 <body>
+	<div class="nav">
+		<a class="navLink" href="index.html">Stuff</a>
+		<a class="navLink" href="about.html">About</a>
+		<a class="navLink" href="anim.html">Animations</a>
+	</div>
+
 	<div class="block">
 		<a class="blockName" href="https://anegasakii.github.io/Notion-Tables/">Notion Tables</a>
 		<p>Sep 2020 [HTML, CSS, JS]<br>
