--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 	<div class="block">
 		<a class="blockName" href="https://anegasakii.github.io/Notion-Tables/">Notion Tables</a>
-		<p>Sep 2020 [HTML, CSS, JS]<br>
+		<p>Sep 2020<br>
 		Notion, a note taking app, is very good at making complex databases that you can filter and sort through.<br>
 		But I also like using simple tables in my notes, so I built a tool to automatically make compatible, paste-able math equation code that'll make simple tables.</p>
 	</div>
 	<div class="block">
 		<a class="blockName" href="https://editor.p5js.org/Anegasaki/sketches" target="_blank">P5JS</a>
-		<p>July - Sep 2020 [p5js]<br>
+		<p>July - Sep 2020<br>
 		A lot of random toys to teach myself how to JS.</p>
 	</div>
 	<div class="block">
