--- a/index.html
+++ b/index.html
@@ -40,5 +40,11 @@
 		<p>Oct 2020<br>
 		Felt like finishing something within the month and am too lazy to go to a calculator and put in numbers myself</p>
 	</div>
+	<div class="block">
+		<a class="blockName" href="https://anegasakii.github.io/Enigma-Machine/">Enigma Machine</a>
+		<p>Nov 2020<br>
+		A friend said "Enigma machine time lets go" after discussing an assignment about text compression,<br>so now this repo exists<br>
+		[still very much in progress, 0 encryption happens and there aren't even any configuration options]</p>
+	</div>
 </body>
 </html>
