added pfps to the about also more links
idk I just needed to fill it out so that there'd be a scrollbar and it'd stop having differently sized blocks >:(

also repl.it and codepen links

--- a/about.html
+++ b/about.html
@@ -15,16 +15,29 @@
 	</div>
 
 	<div class="block">
-	<p class="blockName">This Site</p>
-	<p>This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.</p>
+		<p class="blockName">This Site</p>
+		<p>This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.</p>
 	</div>
 	<div class="block">
-	<p class="blockName">Me</p>
-	<p> There haven't been a lot of good tech classes at the schools I've been in, so I've been teaching myself the basics of coding! <br>
-	It's definitely nothing great, but I'm happy with most of what I've done. <br>
-	For specific learning hubs, I started with <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>, but I use <a href="https://www.freecodecamp.org/" target="_blank">Freecodecamp</a> when I can. <br>
-	I'm just a silly child that doesn't know what to do in life but has found a couple fun things to do.
-	</p>
+		<p class="blockName">Me</p>
+		<p> There haven't been a lot of good tech classes at the schools I've been in, so I've been teaching myself the basics of coding! <br>
+		It's definitely nothing great, but I'm happy with most of what I've done. <br>
+		I started with the basics of Python, then started doing this HTML/CSS/JS stuff, and now a little bit of C++.<br>
+		For specific learning hubs, I started with <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>, but I mostly use <a href="https://www.freecodecamp.org/" target="_blank">Freecodecamp</a> now. <br>
+		I'm just a silly child that doesn't know what to do in life but has found a couple fun things to do.
+		</p>
+	</div>
+	<div class="block">
+		<p class="blockName">Profile Pictures</p>
+		<p>You might've seen me before! Recognize any of these?</p>
+		<div class="pfps">
+			<img src="pfpDiscord.png">
+			<p>Nov 2020 // Discord</p>
+			<img src="pfpMS.png">
+			<p>June 2019 // Microsoft</p>
+			<img src="pfpSteam.png">
+			<p>2017 // Steam</p>
+		</div>
 	</div>
 </body>
 </html>
