--- a/index.html
+++ b/index.html
@@ -15,15 +15,22 @@
 	</div>
 
 	<div class="block">
-		<a class="blockName" href="https://anegasakii.github.io/Notion-Tables/">Notion Tables</a>
-		<p>Sep 2020<br>
-		Notion, a note taking app, is very good at making complex databases that you can filter and sort through.<br>
-		But I also like using simple tables in my notes, so I built a tool to automatically make compatible, paste-able math equation code that'll make simple tables.</p>
+		<a class="blockName" href="https://repl.it/@Anegasaki" target="_blank">Repl.it</a>
+		<p>Oct 2019 - May 2020<br>
+		Before I even used Notepad++, I learned Python in this browser IDE. Both of the dates are guesses:<br>
+		The start is based on when my Codecademy account was made.<br>
+		The end is when the most recent update to a repl was.</p>
 	</div>
 	<div class="block">
 		<a class="blockName" href="https://editor.p5js.org/Anegasaki/sketches" target="_blank">P5JS</a>
 		<p>July - Sep 2020<br>
-		A lot of random toys to teach myself how to JS.</p>
+		A lot of random toys to teach myself how to JavaScript.<br>I might've downloaded & tried Notepad++, but I continued doing stuff in browsers because this canvas was fun to learn and play with.</p>
+	</div>
+	<div class="block">
+		<a class="blockName" href="https://anegasakii.github.io/Notion-Tables/">Notion Tables</a>
+		<p>Sep 2020<br>
+		Notion, a note taking app, is very good at making complex databases that you can filter and sort through.<br>
+		But I also like using simple tables in my notes, so I built a tool to automatically make compatible, paste-able math equation code that'll make simple tables.</p>
 	</div>
 	<div class="block">
 		<a class="blockName" href="https://github.com/Anegasakii">GitHub</a>
@@ -33,18 +40,24 @@
 	<div class="block">
 		<a class="blockName" href="https://anegasakii.github.io/AP-Bio-Flashcards/">AP Bio Flashcards</a>
 		<p>Sep 2020<br>
-		Had to make flashcards for an assignment but didn't feel like making actual phsyical cards,<br>so I had some fun with it</p>
+		Had to make flashcards for an assignment but didn't feel like making actual phsyical cards, so I had some fun with it.</p>
 	</div>
 	<div class="block">
 		<a class="blockName" href="https://anegasakii.github.io/Effective-Raw/">Effective Raw Calculator</a>
 		<p>Oct 2020<br>
-		Felt like finishing something within the month and am too lazy to go to a calculator and put in numbers myself</p>
+		Felt like finishing something within the month and am too lazy to go to a calculator and put in numbers myself.</p>
 	</div>
 	<div class="block">
 		<a class="blockName" href="https://anegasakii.github.io/Enigma-Machine/">Enigma Machine</a>
 		<p>Nov 2020<br>
-		A friend said "Enigma machine time lets go" after discussing an assignment about text compression,<br>so now this repo exists<br>
-		[still very much in progress, 0 encryption happens and there aren't even any configuration options]</p>
+		A friend said "Enigma machine time lets go" after discussing an assignment about text compression, and now this exists.<br>
+		[Still incomplete. There's wheels and it might actually successfully encode and decode stuff (but don't trust me on that)<br>but you still can't rearrange the wheels and there's no plugboard.]</p>
+	</div>
+	<div class="block">
+		<a class="blockName" href="https://codepen.io/anegasaki" target="_blank">CodePen</a>
+		<p>Nov 2020 - Dec 2020<br>
+		FreeCodeCamp has some assignments where you make a project that can pass its testing suite, which is in CodePen.<br>
+		It tells you how to add the testing stuff in something else, but I'm lazy so I just made a CodePen account for that stuff. Here it is!</p>
 	</div>
 </body>
 </html>
