base style update + new link thing
these colour changes have just been sitting until I had something else I needed to change anyway
decided to also add more things into the base spreadsheet (I think most things re-used things like the darken animation)

--- a/index.html
+++ b/index.html
@@ -59,5 +59,10 @@
 		FreeCodeCamp has some assignments where you make a project that can pass its testing suite, which is in CodePen.<br>
 		It tells you how to add the testing stuff in something else, but I'm lazy so I just made a CodePen account for that stuff. Here it is!</p>
 	</div>
+	<div class="block">
+		<a class="blockName" href="https://anegasakii.github.io/Related-Rates-Project/">Related Rates Project</a>
+		<p>Sep 2021<br>
+		Quick thing I made in <a href="https://p5js.org">p5.js</a> for school. It gets its own page because it also has to be presented.</p>
+	</div>
 </body>
 </html>
