--- a/index.html
+++ b/index.html
@@ -8,61 +8,83 @@
 </head>
 
 <body>
-	<div class="nav">
-		<a class="navLink" href="index.html">Stuff</a>
-		<a class="navLink" href="anim.html">Animations</a>
-		<a class="navLink" href="about.html">About</a>
-	</div>
-
-	<div class="block">
-		<a class="blockName" href="https://repl.it/@Anegasaki" target="_blank">Repl.it</a>
-		<p>Oct 2019 - May 2020<br>
-		Before I even used Notepad++, I learned Python in this browser IDE. Both of the dates are guesses:<br>
-		The start is based on when my Codecademy account was made.<br>
-		The end is when the most recent update to a repl was.</p>
-	</div>
-	<div class="block">
-		<a class="blockName" href="https://editor.p5js.org/Anegasaki/sketches" target="_blank">P5JS</a>
-		<p>July - Sep 2020<br>
-		A lot of random toys to teach myself how to JavaScript.<br>I might've downloaded & tried Notepad++, but I continued doing stuff in browsers because this canvas was fun to learn and play with.</p>
-	</div>
-	<div class="block">
-		<a class="blockName" href="https://anegasakii.github.io/Notion-Tables/">Notion Tables</a>
-		<p>Sep 2020<br>
-		Notion, a note taking app, is very good at making complex databases that you can filter and sort through.<br>
-		But I also like using simple tables in my notes, so I built a tool to automatically make compatible, paste-able math equation code that'll make simple tables.</p>
-	</div>
-	<div class="block">
-		<a class="blockName" href="https://github.com/Anegasakii">GitHub</a>
-		<p>Sep 2020<br>
-		I'm not really sure what to do or what's worth putting on the Internet,<br>but I do have an account on this thing since I don't know a lot about hosting websites. You're even on one of the things I made with it!</p>
-	</div>
-	<div class="block">
-		<a class="blockName" href="https://anegasakii.github.io/AP-Bio-Flashcards/">AP Bio Flashcards</a>
-		<p>Sep 2020<br>
-		Had to make flashcards for an assignment but didn't feel like making actual phsyical cards, so I had some fun with it.</p>
-	</div>
-	<div class="block">
-		<a class="blockName" href="https://anegasakii.github.io/Effective-Raw/">Effective Raw Calculator</a>
-		<p>Oct 2020<br>
-		Felt like finishing something within the month and am too lazy to go to a calculator and put in numbers myself.</p>
-	</div>
-	<div class="block">
-		<a class="blockName" href="https://anegasakii.github.io/Enigma-Machine/">Enigma Machine</a>
-		<p>Nov 2020<br>
-		A friend said "Enigma machine time lets go" after discussing an assignment about text compression, and now this exists.<br>
-		[Still incomplete. There's wheels and it might actually successfully encode and decode stuff (but don't trust me on that)<br>but you still can't rearrange the wheels and there's no plugboard.]</p>
-	</div>
-	<div class="block">
-		<a class="blockName" href="https://codepen.io/anegasaki" target="_blank">CodePen</a>
-		<p>Nov 2020 - Dec 2020<br>
-		FreeCodeCamp has some assignments where you make a project that can pass its testing suite, which is in CodePen.<br>
-		It tells you how to add the testing stuff in something else, but I'm lazy so I just made a CodePen account for that stuff. Here it is!</p>
-	</div>
-	<div class="block">
-		<a class="blockName" href="https://anegasakii.github.io/Related-Rates-Project/">Related Rates Project</a>
-		<p>Sep 2021<br>
-		Quick thing I made in <a href="https://p5js.org">p5.js</a> for school. It gets its own page because it also has to be presented.</p>
-	</div>
+	<nav>
+		<a href="index.html">Stuff</a>
+		<a href="art.html">Art</a>
+		<a href="about.html">About</a>
+	</nav>
+	<main>
+		<a href="https://repl.it/@Anegasaki" target="_blank">
+			<header>
+				<h1>Repl.it</h1>
+				<h2>Oct 2019 - May 2020</h2>
+			</header>
+			<p>Before I even used Notepad++, I learned Python in this browser IDE. Both of the dates are guesses, though.<br>
+			The start is based on when my Codecademy account was made.<br>
+			The end is when the most recent update to a repl was.</p>
+		</a>
+		<a href="https://editor.p5js.org/Anegasaki/sketches" target="_blank">
+			<header>
+				<h1>P5JS</h1>
+				<h2>July - Sep 2020</h2>
+			</header>
+			<p>A lot of random toys to teach myself how to JavaScript.<br>
+			I might've downloaded & tried Notepad++, but I continued doing stuff in browsers because this canvas was fun to learn and play with.</p>
+		</a>
+		<a href="https://anegasakii.github.io/Notion-Tables/">
+			<header>
+				<h1>Notion Tables</h1>
+				<h2>Sep 2020</h2>
+			</header>
+			<p>Notion, a note taking app, is very good at making complex databases that you can filter and sort through, but I also like using simple tables in my notes, <br>
+			so, before they added the function natively, I built a tool to automatically make compatible, paste-able math equation code that'll make simple tables.</p>
+		</a>
+		<a href="https://github.com/Anegasakii">
+			<header>
+				<h1>GitHub</h1>
+				<h2>Sep 2020</h2>
+			</header>
+			<p>I'm not really sure what to do or what's worth putting on the Internet,<br>
+			but I do have an account on this thing since I don't know a lot about hosting websites. You're even on one of the things I made with it!</p>
+		</a>
+		<a href="https://anegasakii.github.io/AP-Bio-Flashcards/">
+			<header>
+				<h1>AP Bio Flashcards</h1>
+				<h2>Sep 2020</h2>
+			</header>
+			<p>I had to make flashcards for an assignment, but I didn't feel like making actual phsyical cards, so I had some fun with it.</p>
+		</a>
+		<a href="https://anegasakii.github.io/Effective-Raw/">
+			<header>
+				<h1>Effective Raw Calculator</h1>
+				<h2>Oct 2020</h2>
+			</header>
+			<p>This was made just so I had something to add within the month, and I was in the middle of comparing a bunch of gear for Monster Hunter.</p>
+		</a>
+		<a href="https://anegasakii.github.io/Enigma-Machine/">
+			<header>
+				<h1>Enigma Machine</h1>
+				<h2>Nov 2020</h2>
+			</header>
+			<p>A friend said "Enigma machine time lets go" after discussing an assignment about text compression, and now this exists.<br>
+			[Still incomplete. There's wheels and it might actually successfully encode and decode stuff (don't trust me on that),
+			but you still can't rearrange the wheels and there's no plugboard.]</p>
+		</a>
+		<a href="https://codepen.io/anegasaki" target="_blank">
+			<header>
+				<h1>CodePen</h1>
+				<h2>Nov 2020 - Dec 2020</h2>
+			</header>
+			<p>FreeCodeCamp has some assignments where you make a project that can pass its testing suite, which is in CodePen.<br>
+			It tells you how to add the testing stuff in something else, but I was lazy, so I just made a CodePen account for that stuff.</p>
+		</a>
+		<a href="https://anegasakii.github.io/Related-Rates-Project/">
+			<header>
+				<h1>Related Rates Project</h1>
+				<h2>Sep 2021</h2>
+			</header>
+			<p>A quick thing I made in p5.js for school. It gets its own page because it also has to be presented.</p>
+		</a>
+	</main>
 </body>
 </html>
