--- a/about.html
+++ b/about.html
@@ -8,35 +8,43 @@
 </head>
 
 <body>
-	<div class="nav">
-		<a class="navLink" href="index.html">Stuff</a>
-		<a class="navLink" href="anim.html">Animations</a>
-		<a class="navLink" href="about.html">About</a>
-	</div>
+	<nav>
+		<a href="index.html">Stuff</a>
+		<a href="art.html">Art</a>
+		<a href="about.html">About</a>
+	</nav>
 
 	<div class="block">
-		<p class="blockName">This Site</p>
 		<p>This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.</p>
-	</div>
-	<div class="block">
-		<p class="blockName">Me</p>
-		<p> There haven't been a lot of good tech classes at the schools I've been in, so I've been teaching myself the basics of coding! <br>
+		<p> There haven't been a lot of good tech classes at the schools I've been in, so I taught myself the basics of coding. <br>
 		It's definitely nothing great, but I'm happy with most of what I've done. <br>
-		I started with the basics of Python, then started doing this HTML/CSS/JS stuff, and now a little bit of C++.<br>
+		I started with the basics of Python, then mostly experimenting with HTML/CSS/JS.<br>
 		For specific learning hubs, I started with <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>, but I mostly use <a href="https://www.freecodecamp.org/" target="_blank">Freecodecamp</a> now. <br>
 		I'm just a silly child that doesn't know what to do in life but has found a couple fun things to do.
 		</p>
 	</div>
 	<div class="block">
-		<p class="blockName">Profile Pictures</p>
+		<h1>Profile Pictures</h1>
 		<p>You might've seen me before! Recognize any of these?</p>
 		<div class="pfps">
-			<img src="pfpDiscord.png">
-			<p>Nov 2020 // Discord</p>
-			<img src="pfpMS.png">
-			<p>June 2019 // Microsoft</p>
-			<img src="pfpSteam.png">
-			<p>2017 // Steam</p>
+			<div class="set">
+				<img src="pfpNew.png" style="height: 250px;">
+				<p>Sep 2022<br>Discord</p>
+			</div>
+		</div>
+		<div class="pfps">
+			<div class="set">
+				<img src="pfpOld.png">
+				<p>Nov '20 - Sep '22<br>Discord</p>
+			</div>
+			<div class="set">
+				<img src="pfpMS.png">
+				<p>June 2019<br>Microsoft</p>
+			</div>
+			<div class="set">
+				<img src="pfpSteam.png">
+				<p>2017<br>Steam</p>
+			</div>
 		</div>
 	</div>
 </body>
