--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 		<p>You might've seen me before! Recognize any of these?</p>
 		<div class="pfps">
 			<div class="set">
-				<img src="pfpNew.png" style="height: 250px;">
+				<img src="pfpNew.png" style="height: min(250px, 50vw);">
 				<p>Sep 2022<br>Discord</p>
 			</div>
 		</div>
