--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
 			</header>
 			<p>A quick thing I made in p5.js for school. It gets its own page because it also has to be presented.</p>
 		</a>
+		<a href="https://anegasakii.github.io/Jackbox-Sorted/">
+			<header>
+				<h1>Jackbox Sorted</h1>
+				<h2>New Years! 2023</h2>
+			</header>
+			<p>A friend got *every Jackbox pack* and we were incredibly unprepared to find which pack had which games,
+			and trying to look it up usually gave ranked lists or the very large official and wiki pages.<br>
+			Here's my solution, complete with way too much work and somehow still very low quality for what it is!</p>
+		</a>
 	</main>
 </body>
 </html>
