Adding pmd quiz

--- a/about.html
+++ b/about.html
@@ -9,18 +9,16 @@
 
 <body>
 	<nav>
-		<a href="index.html">Stuff</a>
-		<a href="art.html">Art</a>
+		<a href="index.html">Projects</a>
 		<a href="about.html">About</a>
 	</nav>
 
 	<div class="block">
-		<p>This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.</p>
-		<p> There haven't been a lot of good tech classes at the schools I've been in, so I taught myself the basics of coding. <br>
+		<p>This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.<br>
 		It's definitely nothing great, but I'm happy with most of what I've done. <br>
-		I started with the basics of Python, then mostly experimenting with HTML/CSS/JS.<br>
-		For specific learning hubs, I started with <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>, but I mostly use <a href="https://www.freecodecamp.org/" target="_blank">Freecodecamp</a> now. <br>
-		I'm just a silly child that doesn't know what to do in life but has found a couple fun things to do.
+		I started with the basics of Python, but now have mostly experimented with HTML/CSS/JS.<br>
+		For specific learning hubs, I started with <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>, but I think I preferred <a href="https://www.freecodecamp.org/" target="_blank">Freecodecamp</a>.<br>
+		I've definitely learned the most from just randomly wanting to make something and then figuring it out from there.
 		</p>
 	</div>
 	<div class="block">
