--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 <body>
 	<nav>
-		<a href="index.html">Stuff</a>
-		<a href="art.html">Art</a>
+		<a href="index.html">Projects</a>
 		<a href="about.html">About</a>
 	</nav>
 	<main>
@@ -93,6 +92,15 @@
 			<p>A friend got *every Jackbox pack* and we were incredibly unprepared to find which pack had which games,
 			and trying to look it up usually gave ranked lists or the very large official and wiki pages.<br>
 			Here's my solution, complete with way too much work and somehow still very low quality for what it is!</p>
+		</a>
+		<a href="https://anegasakii.github.io/PMD-Quiz/">
+			<header>
+				<h1>PMD Quizzes</h1>
+				<h2>May 2023</h2>
+			</header>
+			<p>After I got in the mood to replay Explorers of Darkness, I found only a few guides on per-question points,
+			and even fewer recreations of <em>any</em> of the games' intros, so I figured I'd try making one that had the features that I'd want.<br>
+			I originally planned to include all the games as well as an almost reverse version (where you choose a Pokémon and it highlights how to answer), but I got bored and busy, so those are only "maybe"s now.</p>
 		</a>
 	</main>
 </body>
