image galleries, photos
ik no one is gonna see these but it's still fun and maybe it'll help motivate me to go draw something this year :')

--- a/about.html
+++ b/about.html
@@ -10,40 +10,43 @@
 <body>
 	<nav>
 		<a href="index.html">Projects</a>
+		<a href="art.html">Art</a>
 		<a href="about.html">About</a>
 	</nav>
 
-	<div class="block">
-		<p>This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.<br>
-		It's definitely nothing great, but I'm happy with most of what I've done. <br>
-		I started with the basics of Python, but now have mostly experimented with HTML/CSS/JS.<br>
-		For specific learning hubs, I started with <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>, but I think I preferred <a href="https://www.freecodecamp.org/" target="_blank">Freecodecamp</a>.<br>
-		I've definitely learned the most from just randomly wanting to make something and then figuring it out from there.
-		</p>
-	</div>
-	<div class="block">
-		<h1>Profile Pictures</h1>
-		<p>You might've seen me before! Recognize any of these?</p>
-		<div class="pfps">
-			<div class="set">
-				<img src="pfpNew.png" style="height: min(250px, 50vw);">
-				<p>Sep 2022<br>Discord</p>
+	<main class="set">
+		<section>
+			<p>This is/was just a test for learning HTML and CSS, but now I'm using it as a hub for the stuff I've made.<br>
+			It's definitely nothing great, but I'm happy with most of what I've done. <br>
+			I started with the basics of Python, but now have mostly experimented with HTML/CSS/JS.<br>
+			For specific learning hubs, I started with <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>, but I think I preferred <a href="https://www.freecodecamp.org/" target="_blank">Freecodecamp</a>.<br>
+			I've definitely learned the most from just randomly wanting to make something and then figuring it out from there.
+			</p>
+		</section>
+		<section>
+			<h1>Profile Pictures</h1>
+			<p>You might've seen me before! Recognize any of these?</p>
+			<div class="pfps">
+				<div class="set">
+					<img src="art/pfps/pfpNew.png" style="height: min(250px, 50vw);">
+					<p>Sep 2022<br>Discord</p>
+				</div>
 			</div>
-		</div>
-		<div class="pfps">
-			<div class="set">
-				<img src="pfpOld.png">
-				<p>Nov '20 - Sep '22<br>Discord</p>
+			<div class="pfps">
+				<div class="set">
+					<img src="art/pfps/pfpOld.png">
+					<p>Nov '20 - Sep '22<br>Discord</p>
+				</div>
+				<div class="set">
+					<img src="art/pfps/pfpMS.png">
+					<p>June 2019<br>Microsoft</p>
+				</div>
+				<div class="set">
+					<img src="art/pfps/pfpSteam.png">
+					<p>2017<br>Steam</p>
+				</div>
 			</div>
-			<div class="set">
-				<img src="pfpMS.png">
-				<p>June 2019<br>Microsoft</p>
-			</div>
-			<div class="set">
-				<img src="pfpSteam.png">
-				<p>2017<br>Steam</p>
-			</div>
-		</div>
-	</div>
+		</section>
+	</main>
 </body>
 </html>
