--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 	<nav>
 		<a href="index.html">Projects</a>
+		<a href="art.html">Art</a>
 		<a href="about.html">About</a>
 	</nav>
 	<main>
